--- a/Electric_Meter/App.xaml
+++ b/Electric_Meter/App.xaml
@@ -6,17 +6,24 @@
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:vm="clr-namespace:Electric_Meter.MVVM.ViewModels"
              xmlns:views="clr-namespace:Electric_Meter.MVVM.Views"
-             >
-    <Application.Resources>
-        <!-- FIX: Explicitly define the ResourceDictionary to resolve the MergedDictionaries property -->
-        <ResourceDictionary>
+             xmlns:tb="http://www.hardcodet.net/taskbar">
 
-            <!-- Merged Dictionaries (WPFIUI theming) -->
-            <!-- This section uses property element syntax to merge external dictionaries into the main ResourceDictionary of the application. -->
+    <Application.Resources>
+
+        <ResourceDictionary>
+            
+
+            <!-- ⚠ PHẢI đặt trước tất cả resource khác -->
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Light" />
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
+
+            <SolidColorBrush x:Key="TextColorPrimary" Color="#fafafa"/>
+            <SolidColorBrush x:Key="TextColorSecondary" Color="#fafafa"/>
+            <SolidColorBrush x:Key="BackgroundColor" Color="#0a0a0a"/>
+            <SolidColorBrush x:Key="BorderColor" Color="#fafafa"/>
+            <SolidColorBrush x:Key="AccentColor" Color="#fafafa"/>
 
             <!-- Effects -->
             <DropShadowEffect x:Key="WindowDropShadow"
@@ -33,7 +40,7 @@
                               Opacity="0.1"
                               BlurRadius="5"/>
 
-            <!-- TextBlock Styles -->
+            <!-- Text styles -->
             <Style TargetType="TextBlock" x:Key="TitleTextBlockStyle">
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="FontWeight" Value="SemiBold"/>
@@ -45,7 +52,7 @@
                 <Setter Property="Foreground" Value="#666"/>
             </Style>
 
-            <!-- Button Style -->
+            <!-- Button -->
             <Style x:Key="ActionButtonStyle" TargetType="Button">
                 <Setter Property="Padding" Value="8 4"/>
                 <Setter Property="BorderThickness" Value="0"/>
@@ -66,5 +73,6 @@
             </Style>
 
         </ResourceDictionary>
+
     </Application.Resources>
 </Application>
